Added basic interface

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity android:name=".GroupItem"
+                    android:label="Group Item Selected">
+        </activity>
         <receiver android:name=".SMSReceiver">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
