--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
-	<uses-permission android:name="android.permission.READ_SMS" />
-	<uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -20,11 +20,6 @@
         <activity
             android:name="mobserv.smsgaming.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="mobserv.smsgaming.GroupItem"
@@ -41,6 +36,11 @@
             android:name="mobserv.smsgaming.LoginActivity"
             android:label="@string/title_activity_login"
             android:windowSoftInputMode="adjustResize|stateVisible" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="mobserv.smsgaming.JoinGroupActivity"
@@ -49,6 +49,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="mobserv.smsgaming.MainActivity" />
+        </activity>
+        <activity
+            android:name="mobserv.smsgaming.CreateGroupActivity"
+            android:label="@string/title_activity_create_group"
+            android:parentActivityName="mobserv.smsgaming.JoinGroupActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="mobserv.smsgaming.JoinGroupActivity" />
         </activity>
     </application>
 
