--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,11 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/org.codehaus.jackson.core.jar"/>
+	<classpathentry kind="lib" path="libs/org.codehaus.jackson.mapper.jar"/>
+	<classpathentry kind="lib" path="libs/org.restlet.ext.httpclient.jar"/>
+	<classpathentry kind="lib" path="libs/org.restlet.ext.jackson.jar"/>
+	<classpathentry kind="lib" path="libs/org.restlet.ext.net.jar"/>
+	<classpathentry kind="lib" path="libs/org.restlet.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
