--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,12 +5,13 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="13"
         android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +19,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:background="@drawable/gradient_bw" android:debuggable="true">
+
         <activity
             android:name="mobserv.smsgaming.MainActivity"
             android:label="@string/app_name" >
